Development
    Insert metadata into sqlite database, please delete $HOME/.config/gnome-mplayer/gnome-mplayer.db if you get insert errors
        as database schema has changed
    More database foundation code
    Clean up some more depreciated GTK2 calls in GTK3 mode
    Clean up unused variable messages is GTK2 mode
    Clean up some depreciated GTK2 calls in GTK3 mode
    Wrap some more symbolic icons to fix Issue 656
    Add create and delete tables code to database.c
    Add disable cover art fetch as a interface preference rather than only a command line preference
    Add initial support for playlist database which should result in faster loading of playlists 
        This can be disabled with --with-libgda=no passed to configure
    Fix issue #656, fallback to non-symbolic icons if they don't exist in GTK3 mode
1.0.7
    Hide media info when running as a plugin, caused problems with plugger testing grounds site
	Fix issue #647, config_volume not defined when --without-alsa option is used (code may need to be cleaned up)
	Fix issue #646, media is not positioned and sized correctly when remember preference is set
1.0.7b
    Updated Czech translation
	Increase the channel parsing buffer, need to rewrite parseChannels
    Updated Polish translation
    Update Portuguese translation
    Refresh po files 
    Add in support for the anamorphic aspect ratio (2.39:1)
	Some minor fixes to the dbus interface
	Add uk and ru translation patches
	Fix randomization of first file in playlist
	Add in y, g, and J hotkeys to match mplayer hotkeys
	Add stored DVD device to drop down if not detected by gio, workaround RedHat Bug #850402
    Change idledata->device to mplayer_dvd_device may fix problem with dvd device being forgotten
    Fix dconf configuration file
    Don't enable MPRIS in plugin mode
    Basic scrolling wheel patch from Issue #621
	Clean up Issue #629, warning by cppcheck
	Fix some German translations by Wolfgang Knauf